# SPL-Robogel

./: .gitignore  CMakeLists.txt  README.md  cross-config.cmake  install.sh  main.cpp  main2.txt  main3.txt  nao.cpp  nao.h
GameController/: CMakeLists.txt  GameController.cpp  GameController.hpp  GameControllerClient.h  RoboCupGameControlData.cpp  RoboCupGameControlData.hpp  TcpUdpSocket.cpp  TcpUdpSocket.hpp  UDPSocket.cpp  UDPSocket.hpp
GameController/SPLDefault/: CMakeLists.txt
GameController/SPLDefault/include/: RoboCupGameControlData.h  SPLCoachMessage.h  SPLStandartMessage.h
HTWKMotion/: CMakeLists.txt  arm_controller.cpp  arm_controller.h  behavior.cpp  behavior.h
HTWKMotion/eigen/: CMakeLists.txt
LolaConnector/: CMakeLists.txt  LICENSE  README  cross-config.cmake  fila.cpp  fila.h  leds.cpp  leds.h  lola_connector.cpp  lola_frame.cpp  lola_frame.h  nao.cpp  nao.h  state.cpp  state.h
camera/: CMakeLists.txt  Logger.cpp  NaoCamera.cpp  NaoCamera.hpp  main.cpp.old
src/: RGBToPNG.cpp  RGBToPNG.hpp  imageProcessing.cpp  yuv422ToRGB.cpp  yuv422ToRGB.hpp
utils/: CMakeLists.txt  speech.cpp  speech.hpp  state.cpp  state.h
vision/: CMakeLists.txt  README  main.cpp
vision/camera/: Camera.cpp  NaoCamera.cpp  NaoCamera.hpp  cross-config.cmake
vision/lib/: lodepng.cpp
vision/src/: RGBToPNG.cpp  RGBToPNG.hpp  main.cpp  rgbaToPNG.cpp  rgbaToPNG.hpp  yuv422ToRGB.cpp  yuv422ToRGB.hpp  yuvToRGBA.cpp  yuvToRGBA.hpp
vision/utils/: Timer.cpp  rgb_bin_opencv.py  stl_ext.h
